--- a/_includes/head_tags.html
+++ b/_includes/head_tags.html
@@ -54,6 +54,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
   <!--Incosolata-->
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  
+
+  <!--Console-->
+  <meta name="google-site-verification" content="45OX3877nNJ19QJjb2BV3R37u9ljID4BJm-3tmA7g4Q" />
   
 </head>
