--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,9 +22,9 @@
             <a class="nav-link navlinks float-right" href="{{ site.url | append:'/publications'}}">Publications</a>
           </li>
 
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link navlinks float-right" href="{{ site.url | append:'/Harshit_Varma_CV.pdf'}}">CV</a>
-          </li>
+          </li> -->
 
           <li class="nav-item">
             <a class="nav-link navlinks float-right" onclick="modeSwitcher()"><i id="theme-toggle" class=""></i></a>
