--- a/_includes/update_wrapper.html
+++ b/_includes/update_wrapper.html
@@ -8,6 +8,10 @@
                 Updates
             </div>
 
+            <div class="m-0 p-0">
+                Please note: I plan to apply to Ph.D. programs this year for the Fall 2025 admission cycle.
+            </div>
+
         </div>
 
         <div class="m-0 p-0 mb-5 border-0" style="max-height: 25vh; overflow-y: scroll;">
