--- a/_includes/update_wrapper.html
+++ b/_includes/update_wrapper.html
@@ -8,8 +8,8 @@
                 Updates
             </div>
 
-            <div class="m-0 p-0">
-                Please note: I plan to apply to Ph.D. programs this year for the Fall 2025 admission cycle.
+            <div class="highlight m-0 p-0">
+                <i>Please note: I plan to apply to Ph.D. programs this year for the Fall 2025 admission cycle.</i>
             </div>
 
         </div>
