--- a/_includes/update_wrapper.html
+++ b/_includes/update_wrapper.html
@@ -9,7 +9,7 @@
             </div>
 
             <div class="highlight m-0 p-0">
-                <i>Please note: I plan to apply to Ph.D. programs this year for the Fall 2025 admission cycle.</i>
+                <i>P.S. I plan to apply to Ph.D. programs this year for the Fall 2025 admission cycle.</i>
             </div>
 
         </div>
