--- a/_includes/update_wrapper.html
+++ b/_includes/update_wrapper.html
@@ -8,9 +8,9 @@
                 Updates
             </div>
 
-            <div class="highlight m-0 p-0">
+            <!-- div class="highlight m-0 p-0">
                 <i>P.S. I plan to apply to Ph.D. programs this year for the Fall 2025 admission cycle.</i>
-            </div>
+            </div -->
 
         </div>
 
