--- a/_includes/about_wrapper.html
+++ b/_includes/about_wrapper.html
@@ -10,11 +10,11 @@
             
             <div class="font-weight-light m-0 p-0">
                 <b>
-                <span class="highlight">Pre-Doctoral Researcher<span>
+                <span class="highlight">Founding Member of Technical Staff<span>
                 &bull;
                 
                     <a href="https://deepmind.google/" target="_blank" class="m-0 p-0">
-                        Google DeepMind
+                        Stealth AI Startup
                     </a>
                 </b>
 
