--- a/_includes/about_wrapper.html
+++ b/_includes/about_wrapper.html
@@ -13,7 +13,7 @@
                 <span class="highlight">Founding Member of Technical Staff<span>
                 &bull;
                 
-                    <a href="https://deepmind.google/" target="_blank" class="m-0 p-0">
+                    <a href="/" target="_blank" class="m-0 p-0">
                         Stealth AI Startup
                     </a>
                 </b>
