--- a/_includes/head_tags.html
+++ b/_includes/head_tags.html
@@ -1,5 +1,15 @@
 <head>
 
+  <!-- Google Analytics -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-49H8NCBRZV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-49H8NCBRZV');
+  </script>
+  
   <script type="text/javascript">
     let theme_init = sessionStorage.getItem('theme');
     if (theme_init) {
