--- a/_includes/about_wrapper.html
+++ b/_includes/about_wrapper.html
@@ -13,8 +13,8 @@
                 <span class="highlight">Founding Member of Technical Staff<span>
                 &bull;
                 
-                    <a href="/" target="_blank" class="m-0 p-0">
-                        Stealth AI Startup
+                    <a href="https://www.inceptionlabs.ai/" target="_blank" class="m-0 p-0">
+                        Inception Labs
                     </a>
                 </b>
 
