--- a/_includes/about_wrapper.html
+++ b/_includes/about_wrapper.html
@@ -10,7 +10,7 @@
             
             <div class="font-weight-light m-0 p-0">
                 <b>
-                <span class="highlight">Founding Member of Technical Staff<span>
+                <span class="highlight">Founding Team<span>
                 &bull;
                 
                     <a href="https://www.inceptionlabs.ai/" target="_blank" class="m-0 p-0">
