--- a/_includes/about_wrapper.html
+++ b/_includes/about_wrapper.html
@@ -39,7 +39,8 @@
                 <a href="https://www.linkedin.com/in/harshit-varma" target="_blank"> LinkedIn </a> /
                 <a href="https://scholar.google.com/citations?hl=en&user=ox-SgKcAAAAJ&view_op=list_works&sortby=pubdate" target="_blank"> Google Scholar </a> / 
                 <a href="https://www.semanticscholar.org/author/Harshit-Varma/2121301789" target="_blank">Semantic Scholar</a> /
-                <a href="https://twitter.com/hrshtv" target="_blank"> Twitter </a>
+                <a href="https://twitter.com/hrshtv" target="_blank"> Twitter </a> /
+                <a href="https://hrshtv.github.io/assets/CV_Harshit_Varma_2025.pdf" target="_blank"> CV </a>
             </span>
 
         </div>
