--- a/_includes/about_wrapper.html
+++ b/_includes/about_wrapper.html
@@ -34,7 +34,7 @@
         <div class="mt-0 pt-0 mb-0 border-0 mx-auto text-center">
 
             <span class="">
-                <a href="https://hrshtv.github.io/assets/CV_Harshit_Varma_2025.pdf" target="_blank"> CV </a> \
+                <a href="https://hrshtv.github.io/assets/CV_Harshit_Varma_2025.pdf" target="_blank"> CV </a> /
                 <a href="https://github.com/hrshtv" target="_blank"> GitHub </a> /
                 <a href="https://www.linkedin.com/in/harshit-varma" target="_blank"> LinkedIn </a> /
                 <a href="https://scholar.google.com/citations?hl=en&user=ox-SgKcAAAAJ&view_op=list_works&sortby=pubdate" target="_blank"> Google Scholar </a> / 
