--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,6 +22,10 @@
             <a class="nav-link navlinks float-right" href="{{ site.url | append:'/publications'}}">Publications</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link navlinks float-right" href="{{ site.url | append:'/assets/CV_Harshit_Varma_2025.pdf'}}">CV</a>
+          </li>
+
 <!--           <li class="nav-item">
             <a class="nav-link navlinks float-right" href="{{ site.url | append:'/Harshit_Varma_CV.pdf'}}">CV</a>
           </li> -->
